2014-01-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/lib/Image.cpp (thumbnail): New method for fast image
	resizing, particularly to make thumbnails.

	* coders/gif.c: Log when Netscape loop exension is read and
	written.

	* coders/png.c (WriteOnePNGImage): In optimize mode, disable matte
	channel immediately if there are no non-opaque pixels.  Also added
	some useful logging.  Resolves SourceForge issue #252 "convert an
	8bit PNG result in a corrupted image ".

	* wand/magick_wand.c (MagickSetImageGravity): New Wand method to
	set image gravity.
	(MagickGetImageGravity): New wand method to get image gravity.

2014-01-02  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (ReadOnePNGImage): Use libpng function
	png_set_strip_16_to_8() when scaling 16-bit input PNG down to
	8-bit in a Q8 build.  The png_set_scale_16_to_8() function is
	more accurate, but the slight difference causes reference tests
	to fail and causes unexpected difference between the behavior
	of PNG and other formats.  If png_set_strip_16_to_8() is not
	supported in libpng, then we use png_set_scale_16_to_8() if
	that is available.

2014-01-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* INSTALL-windows.txt: Update for 2014.

	* INSTALL-unix.txt: Update for 2014.

	* Copyright.txt: Update for 2014.

	* NEWS.txt: Update for 2014.

	* README.txt: Update for 2014.

	* doc: Update for 2014.

	* www: Update for 2014.

	* VisualMagick/installer: Update for 2014.

	* ChangeLog: Rotate Changelog to ChangeLog.2013 for 2014.
